# GIF

./: .gitignore  =0.12.0  =0.20.0  =3.7.0  LICENSE  README.md  analyze_performance.py  config.py  debug_gem_trainer.py  debug_gif_training.py  debug_snn_weights.py  fix_gif_training.py  main.py  optimize_performance.py  pyproject.toml  realistic_ecg_noisy_clinical_environment.csv  realistic_ecg_quiet_clinical_environment.csv  realistic_ecg_typical_clinical_environment.csv  requirements.txt  run_example.py  test.py  test_balanced_training.py  test_simple_training.py  train.py
Prompts/: Prompt0.md  Prompt1.1.md  Prompt1.2.md  Prompt1.3.md  Prompt1.4.md  Prompt2.1.md  Prompt2.2.md  Prompt2.3.md  Prompt2.4.md  Prompt3.1.md  Prompt3.2.md  Prompt3.3.md  Prompt3.4.md  Prompt4.1.md  Prompt4.2.md  Prompt4.3.md  Prompt4.4.md  Prompt5.1.md  Prompt5.2.md  Prompt5.3.md  Prompt6.1.md  Prompt6.2.md  Prompt6.3.md  Prompt6.4.md
Reference/: Core Paper2.docx  Phase0.md  Phase1.md  Phase2.md  Phase3.md  Phase4.md  Phase5.md  Phase6.md
Rules/: Rules.md
applications/analysis/: __init__.py  continual_learning_analyzer.py
applications/poc_exoplanet/: analysis.ipynb  analyze_results.py  config_exo.py  demo_complete_system.py  generate_table_iv.py  main_exo.py  run_analysis.py  run_baselines.py
applications/poc_exoplanet/analysis/: performance_analyzer.py
applications/poc_exoplanet/baselines/: cnn_baseline.py  transformer_baseline.py
applications/poc_exoplanet/data/: table_iv_results.txt
applications/poc_exoplanet/decoders/: exoplanet_decoder.py
applications/poc_medical/: analysis.ipynb  comprehensive_test.py  config_med.py  create_publication_figure.py  create_publication_tables.py  final_publication_summary.py  generate_publication_results.py  main_med.py  validate_experiment.py  validate_modules.py
applications/poc_medical/encoders/: ecg_encoder.py
applications/self_generation/: __init__.py  generate_interface.py
data/: README.md  synthetic_dataset_A.pt  synthetic_dataset_B.pt
data_generators/: ecg_generator.py  exoplanet_generator.py
docs/: Advanced_AGI_Validation_Report.md  CONTRIBUTING.md  DU_Core_V2_Architecture.md  Knowledge_Augmentation_Integration.md  Knowledge_Augmentation_System.md  Meta_Cognition_Self_Generation.md  Project_Status_Report.md  README.md
examples/: knowledge_augmentation_demo.py  meta_cognition_demo.py  system_potentiation_demo.py  vsa_deep_understanding_demo.py
gif_framework/: __init__.py  module_library.py  orchestrator.py
gif_framework/core/: __init__.py  du_core.py  du_core_v2.py  knowledge_augmenter.py  memory_systems.py  rtl_mechanisms.py  vsa_operations.py
gif_framework/interfaces/: __init__.py  base_interfaces.py  decoder_interface.py  encoder_interface.py
gif_framework/training/: __init__.py  trainer.py
gif_framework/utils/: __init__.py
gif_poc_modules/: __init__.py  data_utils.py
gif_poc_modules/architecture/: __init__.py  core_du.py  decoder.py  encoder.py  gif_model.py
gif_poc_modules/training/: __init__.py  losses.py  train_evaluate.py
gif_poc_modules/utils/: __init__.py  plotting.py  xai_utils.py
results/logs/: evaluation_results.json  finetune_training_history.json  primary_training_history.json
results/poc_exoplanet/: evaluation_metrics.csv  evaluation_results.json  experiment_config.json  experiment_summary.txt  performance_comparison_table.csv  performance_report.md  training_logs.csv  training_logs.json
results/saved_models/: depth_scaler.pkl  gif_poc_finetuned_model.pth  gif_poc_primary_model.pth
saved_models/: air_passengers_predictions.csv  air_scaler.pkl  multi_task_lstm.pth  sun_scaler.pkl  sunspots_predictions.csv
simulators/: neuromorphic_sim.py
tests/: __init__.py  mocks.py  test_advanced_agi_validation.py  test_core_architecture_validation.py  test_ecg_physics_engine.py  test_exoplanet_physics_engine.py  test_framework_structure.py  test_gpu_acceleration.py  test_integration_training.py  test_meta_cognition.py  test_orchestrator.py  test_self_generation.py  test_web_rag_priority.py  test_weight_reset_protocol.py
tests/applications/: __init__.py  test_complete_potentiation_pipeline.py  test_continual_learning_analyzer.py  test_potentiation_analysis.py  test_potentiation_protocol.py
tests/core/: __init__.py  test_du_core.py  test_du_core_v2.py  test_knowledge_augmentation.py  test_knowledge_augmenter.py  test_memory_systems.py  test_potentiation.py  test_rtl_mechanisms.py  test_vsa_operations.py
tests/interfaces/: __init__.py  test_base_interfaces.py
tests/simulators/: __init__.py  test_neuromorphic_sim.py
tests/training/: __init__.py  test_trainer.py
(+36 files in other folders)
