[project]
name = "gif"
version = "0.1.0"
description = "General Intelligence Framework - A modular AGI platform based on spiking neural networks"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "GIF Development Team", email = "gif@example.com"}
]
license = {text = "MIT"}
keywords = ["artificial-intelligence", "spiking-neural-networks", "neuromorphic", "real-time-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "batman-package",
    "requests",
    "beautifulsoup4",
    "pymilvus",
    "neo4j",
    "sentence-transformers",
    "snntorch",
    "pytest",
    "duckduckgo-search>=8.1.1",
    "polars>=1.31.0",
    "psutil>=7.0.0",
    "pywavelets>=1.9.0",
    "celerite2>=0.3.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
]
snn = [
    "snntorch>=0.7.0",
]
data = [
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "polars>=0.20.0",
    "batman-package>=2.4.0",
    # "celerite2>=0.5.0",  # Temporarily disabled due to version conflict
]
knowledge = [
    "pymilvus>=2.3.0",
    "neo4j>=5.0.0",
    "sentence-transformers>=2.2.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "duckduckgo-search>=3.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gif_framework"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["gif_framework"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
